[package]
name = 'openapi_mock'
version = '0.1.0'
edition = '2021'


[dependencies.hyper]
version = '1.4.1'
features = ['full']

[dependencies.hyper-util]
version = '0.1.8'
features = ['full']

[dependencies.tokio]
version = '1.40.0'
features = ['full']

[dependencies.http-body-util]
version = '0.1.2'

[dependencies.clap]
version = '4.5.17'
features = ['derive']

[dependencies.serde]
version = '1.0.210'

[dependencies.serde_json]
version = '1.0.128'

[dependencies.serde_yaml]
version = '0.9.33'

[dependencies.oas3]
version = '0.10.0'
