[package]
name = 'openapi_mock'
version = '0.1.0'
edition = '2021'


[dependencies]
hyper = { version = '1.6.0', features = ['full'] }
hyper-util = { version = '0.1.11', features = ['full'] }
tokio = { version = '1.44.2', features = ['full'] }
http-body-util = { version = '0.1.3' }
clap = { version = '4.5.35', features = ['derive'] }
serde = { version = '1.0.219' }
serde_json = { version = '1.0.140' }
serde_yaml = { version = '0.9.33' }
regex = { version = '1.11.1' }
oas3 = { version = '0.16.0' }
